[gd_scene load_steps=6 format=2]

[ext_resource path="res://Levels/DungeonScene.tscn" type="PackedScene" id=1]
[ext_resource path="res://Levels/AxeButton.gd" type="Script" id=2]
[ext_resource path="res://Levels/StaffButton.gd" type="Script" id=3]
[ext_resource path="res://Levels/SwordButton.gd" type="Script" id=4]
[ext_resource path="res://Levels/VerifyWeaponButton.gd" type="Script" id=5]

[node name="DungeonSceneBase" instance=ExtResource( 1 )]

[node name="TextLabel" parent="CanvasLayer2" index="0"]
margin_left = 6.0
text = "Select a weapon!"

[node name="SwordButton" type="Button" parent="CanvasLayer2" index="1"]
margin_left = 55.0
margin_top = 445.0
margin_right = 219.0
margin_bottom = 483.0
text = "Sword"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AxeButton" type="Button" parent="CanvasLayer2" index="2"]
margin_left = 246.882
margin_top = 446.0
margin_right = 410.882
margin_bottom = 483.0
text = "Axe"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaffButton" type="Button" parent="CanvasLayer2" index="3"]
margin_left = 434.667
margin_top = 444.665
margin_right = 598.667
margin_bottom = 483.665
rect_pivot_offset = Vector2( 82, 1.33484 )
text = "Staff"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VerifyWeaponButton" type="Button" parent="CanvasLayer2" index="4"]
visible = false
margin_left = 776.239
margin_top = 442.885
margin_right = 917.239
margin_bottom = 483.885
text = "Continue"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CanvasLayer2/SwordButton" to="CanvasLayer2/SwordButton" method="_on_SwordButton_pressed"]
[connection signal="pressed" from="CanvasLayer2/SwordButton" to="CanvasLayer2/VerifyWeaponButton" method="_on_SwordButton_pressed"]
[connection signal="pressed" from="CanvasLayer2/AxeButton" to="CanvasLayer2/AxeButton" method="_on_AxeButton_pressed"]
[connection signal="pressed" from="CanvasLayer2/AxeButton" to="CanvasLayer2/VerifyWeaponButton" method="_on_AxeButton_pressed"]
[connection signal="pressed" from="CanvasLayer2/StaffButton" to="CanvasLayer2/StaffButton" method="_on_StaffButton_pressed"]
[connection signal="pressed" from="CanvasLayer2/StaffButton" to="CanvasLayer2/VerifyWeaponButton" method="_on_StaffButton_pressed"]
[connection signal="pressed" from="CanvasLayer2/VerifyWeaponButton" to="CanvasLayer2/VerifyWeaponButton" method="_on_VerifyWeaponButton_pressed"]
